[package]
name = "change-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
log = { version = "0.4.22", features = [
    "release_max_level_info",
    "max_level_debug",
] }
simple_logger = { version = "5.0.0", default-features = true, features = ["stderr"] }
